css/style.css
/* ... */
footer.navbar .navbar-text {
  display: none;
}

footer .navbar-nav > li > a {
  color: white;
}

footer .navbar-nav > li > a:hover,
footer .navbar-nav > li > a:focus {
  background-color: var(--brown-4);
}

.img-event {
  max-width: 400px;
}

@media only screen and (max-width: 768px) {
  .hidden-in-mobile {
    display: none;
  }

  .content-hidden {
    top: 60px;
  }

  .header {
    height: 60px;
    position: fixed;
    width: 100%;
  }

  .header .header-main {
    margin: 0 25px;
  }

  .header > .header-main > a > img {
    position: inherit;
    left: unset;
    width: 190px;
  }

  .header .header-icons,
  .header .header-main #menu-text {
    display: none;
  }

  .header .header-main .menu-buttons {
    width: unset;
  }

  .nav {
    padding-left: 25px;
  }

  .search-container {
    position: relative;
    top: 60px;
  }

  .search-container form {
    margin-left: 20px;
    width: 100%;
  }

  .search-container input {
    width: 100%;
  }

  .body-content {
    position: relative;
    top: 60px;
  }

  .article {
    margin-top: 50px;
    flex-direction: column-reverse;
  }

  .article .article-content {
    max-width: unset;
    margin: 0 7% 50px 7%;
  }

  .article .article-content .article-body > img {
    margin: 20px auto!important;
  }

  .article .meta-content {
    margin: 0 7% 50px;
  }

  .article .article-body {
    margin: 0;
  }

  .article .article-content .img-article {
    float: none;
    display: block;
  }

  .article-list-pager {
    flex-direction: column;
    margin: 0;
  }

  .other-articles {
    padding: 50px 7%;
  }

  .other-articles-box {
    margin: 0;
    margin-bottom: 30px;
  }

  .btn-pager {
    margin: 20px;
  }

  footer {
    top: 60px;
  }

  footer.navbar .navbar-text {
    display: unset;
    color: white;
  }
  
  footer .navbar-nav {
    float: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0;
  }

  footer .navbar-nav > li > a {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

.category-label.ajanlok,
.ui-autocomplete > li.ajanlok.ui-state-focus,
.header .navbar-links p.ajanlok:hover {
  color: white;
  background-color: #fe674c;
}

.category-label.hirek,
.ui-autocomplete > li.hirek.ui-state-focus,
.header .navbar-links p.hirek:hover {
  color: white;
  background-color: #24416b;
}

.category-label.interju,
.ui-autocomplete > li.interju.ui-state-focus,
.header .navbar-links p.interju:hover {
  color: white;
  background-color: #b8e6a5;
}

.category-label.beszamolo,
.ui-autocomplete > li.beszamolo.ui-state-focus,
.header .navbar-links p.beszamolo:hover {
  color: white;
  background-color: #ad97e0;
}

.category-label.eletrajz,
.ui-autocomplete > li.eletrajz.ui-state-focus,
.header .navbar-links p.eletrajz:hover {
  color: white;
  background-color: #eccf8b;
}

.category-label.reszlet,
.ui-autocomplete > li.reszlet.ui-state-focus,
.header .navbar-links p.reszlet:hover {
  color: white;
  background-color: #7fa6dd;
}

.category-label.egyeb,
.ui-autocomplete > li.egyeb.ui-state-focus,
.header .navbar-links p.egyeb:hover {
  color: white;
  background-color: #6887fb;
}

.category-label.olvasnivalo,
.ui-autocomplete > li.olvasnivalo.ui-state-focus,
.header .navbar-links p.olvasnivalo:hover {
  color: white;
  background-color: #4dcca1;
}

.category-label.latnivalo,
.ui-autocomplete > li.latnivalo.ui-state-focus,
.header .navbar-links p.latnivalo:hover {
  color: white;
  background-color: #6c23c7;
}

.category-label.hallgatnivalo,
.ui-autocomplete > li.hallgatnivalo.ui-state-focus,
.header .navbar-links p.hallgatnivalo:hover {
  color: white;
  background-color: #dc9e75;
}

